reverse-proxy-ton/minio-virtualservice.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: minio
  namespace: reverse-proxy
spec:
  hosts:
    - minio.lag0.com.br
  gateways:
    - istio-system/lag0-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: minio.lag0.com.br
            port:
              number: 9001
      timeout: 600s
