reverse-proxy-ton/nas-virtualservice.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: nas
  namespace: reverse-proxy
spec:
  hosts:
    - nas.lag0.com.br
  gateways:
    - istio-system/lag0-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: nas.lag0.com.br
            port:
              number: 80
      timeout: 600s
