reverse-proxy-ton/proxmox-destinationrule.yaml
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: proxmox
  namespace: reverse-proxy
spec:
  host: proxmox.lag0.com.br
  trafficPolicy:
    tls:
      mode: SIMPLE
      insecureSkipVerify: true
