reverse-proxy-ton/s3-serviceentry.yaml
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: s3-external
  namespace: reverse-proxy
spec:
  hosts:
    - s3.lag0.com.br
  ports:
    - number: 9000
      name: http
      protocol: HTTP
  resolution: STATIC
  endpoints:
    - address: 192.168.88.245
