reverse-proxy-ton/virtualservice.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: gw
  namespace: reverse-proxy
spec:
  hosts:
    - gw.lag0.com.br
  gateways:
    - istio-system/lag0-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: gw.lag0.com.br
            port:
              number: 80
      timeout: 600s
